NLI-vs-Style-Similarity.pt script

--- a/src/DSL-TL.ipynb
+++ b/src/DSL-TL.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-11T10:43:21.297341Z",
-     "start_time": "2024-12-11T10:43:21.281963Z"
+     "end_time": "2024-12-12T14:00:43.147161Z",
+     "start_time": "2024-12-12T14:00:42.642690Z"
     }
    },
    "outputs": [],
@@ -53,14 +53,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
       "text/plain": "       id                                               text language\n0     546  Oxford's vintage jazz masters The Original Rab...    EN-GB\n1    2482  WASHINGTON – A federal judge ruled yesterday t...    EN-US\n2    2810  Someone once said, “Any beer is good beer, col...    EN-US\n3     248  Mayor Rahm Emanuel was quick on Tuesday mornin...    EN-US\n4     796  AN abandoned car, which is partly parked on a ...    EN-US\n..    ...                                                ...      ...\n592   730  A passenger was horrified after she was told b...    EN-US\n593    20  GOODYEAR, Ariz. — Whether to extend Corey Klub...    EN-US\n594   411  FOUR scientists from the University of Southam...    EN-GB\n595   821  A GWENT cycling star is among 11 people from G...    EN-GB\n597  2233  BANBURY extended their winning run to 11 games...    EN-GB\n\n[523 rows x 3 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>text</th>\n      <th>language</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>546</td>\n      <td>Oxford's vintage jazz masters The Original Rab...</td>\n      <td>EN-GB</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2482</td>\n      <td>WASHINGTON – A federal judge ruled yesterday t...</td>\n      <td>EN-US</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2810</td>\n      <td>Someone once said, “Any beer is good beer, col...</td>\n      <td>EN-US</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>248</td>\n      <td>Mayor Rahm Emanuel was quick on Tuesday mornin...</td>\n      <td>EN-US</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>796</td>\n      <td>AN abandoned car, which is partly parked on a ...</td>\n      <td>EN-US</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>592</th>\n      <td>730</td>\n      <td>A passenger was horrified after she was told b...</td>\n      <td>EN-US</td>\n    </tr>\n    <tr>\n      <th>593</th>\n      <td>20</td>\n      <td>GOODYEAR, Ariz. — Whether to extend Corey Klub...</td>\n      <td>EN-US</td>\n    </tr>\n    <tr>\n      <th>594</th>\n      <td>411</td>\n      <td>FOUR scientists from the University of Southam...</td>\n      <td>EN-GB</td>\n    </tr>\n    <tr>\n      <th>595</th>\n      <td>821</td>\n      <td>A GWENT cycling star is among 11 people from G...</td>\n      <td>EN-GB</td>\n    </tr>\n    <tr>\n      <th>597</th>\n      <td>2233</td>\n      <td>BANBURY extended their winning run to 11 games...</td>\n      <td>EN-GB</td>\n    </tr>\n  </tbody>\n</table>\n<p>523 rows × 3 columns</p>\n</div>"
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,11 +71,36 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-11T10:43:32.397712Z",
-     "start_time": "2024-12-11T10:43:32.393628Z"
+     "end_time": "2024-12-12T14:00:45.570641Z",
+     "start_time": "2024-12-12T14:00:45.527037Z"
     }
    },
    "id": "561246952e4b6e76"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Oxford's vintage jazz masters The Original Rabbit Foot Spasm Band pull a night of surprises and virtuoso musicianship out of their hats with a knees-up to remember\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print text fully for one example\n",
+    "print(df_dev['text'].iloc[0])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-12-12T14:01:11.288777Z",
+     "start_time": "2024-12-12T14:01:11.279882Z"
+    }
+   },
+   "id": "8370fb46a017cc0"
   },
   {
    "cell_type": "code",
