NLI-vs-Style-Similarity.pt script

--- a/src/NLI-vs-Style-Similarity.ipynb
+++ b/src/NLI-vs-Style-Similarity.ipynb
@@ -8570,7 +8570,100 @@
       "Processing examples in test:  78%|███████▊  | 7832/10000 [1:52:02<52:34,  1.46s/it]  \u001B[A\n",
       "Processing examples in test:  78%|███████▊  | 7833/10000 [1:52:04<55:28,  1.54s/it]\u001B[A\n",
       "Processing examples in test:  78%|███████▊  | 7834/10000 [1:52:07<1:07:06,  1.86s/it]\u001B[A\n",
-      "Processing examples in test:  78%|███████▊  | 7838/10000 [1:52:08<35:29,  1.02it/s]  \u001B[A"
+      "Processing examples in test:  78%|███████▊  | 7838/10000 [1:52:08<35:29,  1.02it/s]  \u001B[A\n",
+      "Processing examples in test:  78%|███████▊  | 7840/10000 [1:52:10<37:11,  1.03s/it]\u001B[A\n",
+      "Processing examples in test:  78%|███████▊  | 7842/10000 [1:52:12<37:39,  1.05s/it]\u001B[A\n",
+      "Processing examples in test:  78%|███████▊  | 7843/10000 [1:52:13<37:49,  1.05s/it]\u001B[A"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed to transform A blond headed child in yellow boots and yellow jacket vest playing in the gravel with his pail, shovel and trucks. or A blonde boy is playing near a construction zone.. Retrying 5 more times ...\n",
+      "Failed to transform A blond headed child in yellow boots and yellow jacket vest playing in the gravel with his pail, shovel and trucks. or A blonde boy is playing near a construction zone.. Retrying 4 more times ...\n",
+      "Failed to transform A blond headed child in yellow boots and yellow jacket vest playing in the gravel with his pail, shovel and trucks. or A blonde boy is playing near a construction zone.. Retrying 3 more times ...\n",
+      "Failed to transform A blond headed child in yellow boots and yellow jacket vest playing in the gravel with his pail, shovel and trucks. or A blonde boy is playing near a construction zone.. Retrying 2 more times ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Processing examples in test:  78%|███████▊  | 7844/10000 [1:52:24<1:46:59,  2.98s/it]\u001B[A"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed to transform A blond headed child in yellow boots and yellow jacket vest playing in the gravel with his pail, shovel and trucks. or A blonde boy is playing near a construction zone.. Retrying 1 more times ...\n",
+      "Failed to transform A blond headed child in yellow boots and yellow jacket vest playing in the gravel with his pail, shovel and trucks. or A blonde child is playing.. Retrying 5 more times ...\n",
+      "Failed to transform A blond headed child in yellow boots and yellow jacket vest playing in the gravel with his pail, shovel and trucks. or A blonde child is playing.. Retrying 4 more times ...\n",
+      "Failed to transform A blond headed child in yellow boots and yellow jacket vest playing in the gravel with his pail, shovel and trucks. or A blonde child is playing.. Retrying 3 more times ...\n",
+      "Failed to transform A blond headed child in yellow boots and yellow jacket vest playing in the gravel with his pail, shovel and trucks. or A blonde child is playing.. Retrying 2 more times ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Processing examples in test:  78%|███████▊  | 7846/10000 [1:52:30<1:45:06,  2.93s/it]\u001B[A"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed to transform A blond headed child in yellow boots and yellow jacket vest playing in the gravel with his pail, shovel and trucks. or A blonde child is playing.. Retrying 1 more times ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Processing examples in test:  78%|███████▊  | 7848/10000 [1:52:32<1:19:37,  2.22s/it]\u001B[A\n",
+      "Processing examples in test:  78%|███████▊  | 7850/10000 [1:52:33<1:02:40,  1.75s/it]\u001B[A\n",
+      "Processing examples in test:  79%|███████▊  | 7853/10000 [1:52:35<44:47,  1.25s/it]  \u001B[A\n",
+      "Processing examples in test:  79%|███████▊  | 7855/10000 [1:52:37<42:03,  1.18s/it]\u001B[A\n",
+      "Processing examples in test:  79%|███████▊  | 7856/10000 [1:52:39<47:35,  1.33s/it]\u001B[A\n",
+      "Processing examples in test:  79%|███████▊  | 7857/10000 [1:52:41<49:17,  1.38s/it]\u001B[A\n",
+      "Processing examples in test:  79%|███████▊  | 7858/10000 [1:52:42<49:02,  1.37s/it]\u001B[A\n",
+      "Processing examples in test:  79%|███████▊  | 7860/10000 [1:52:49<1:18:12,  2.19s/it]\u001B[A\n",
+      "Processing examples in test:  79%|███████▊  | 7862/10000 [1:52:50<1:00:19,  1.69s/it]\u001B[A\n",
+      "Processing examples in test:  79%|███████▊  | 7863/10000 [1:52:53<1:04:36,  1.81s/it]\u001B[A\n",
+      "Processing examples in test:  79%|███████▊  | 7865/10000 [1:52:55<55:58,  1.57s/it]  \u001B[A\n",
+      "Processing examples in test:  79%|███████▊  | 7868/10000 [1:52:57<40:59,  1.15s/it]\u001B[A\n",
+      "Processing examples in test:  79%|███████▊  | 7869/10000 [1:52:58<41:22,  1.16s/it]\u001B[A\n",
+      "Processing examples in test:  79%|███████▊  | 7871/10000 [1:53:01<42:19,  1.19s/it]\u001B[A\n",
+      "Processing examples in test:  79%|███████▊  | 7874/10000 [1:53:02<31:02,  1.14it/s]\u001B[A\n",
+      "Processing examples in test:  79%|███████▉  | 7875/10000 [1:53:04<37:34,  1.06s/it]\u001B[A\n",
+      "Processing examples in test:  79%|███████▉  | 7877/10000 [1:53:06<38:25,  1.09s/it]\u001B[A\n",
+      "Processing examples in test:  79%|███████▉  | 7881/10000 [1:53:08<28:01,  1.26it/s]\u001B[A\n",
+      "Processing examples in test:  79%|███████▉  | 7882/10000 [1:53:09<27:23,  1.29it/s]\u001B[A\n",
+      "Processing examples in test:  79%|███████▉  | 7883/10000 [1:53:13<49:36,  1.41s/it]\u001B[A\n",
+      "Processing examples in test:  79%|███████▉  | 7887/10000 [1:53:15<31:49,  1.11it/s]\u001B[A\n",
+      "Processing examples in test:  79%|███████▉  | 7889/10000 [1:53:16<28:04,  1.25it/s]\u001B[A\n",
+      "Processing examples in test:  79%|███████▉  | 7893/10000 [1:53:17<22:25,  1.57it/s]\u001B[A\n",
+      "Processing examples in test:  79%|███████▉  | 7894/10000 [1:53:19<28:20,  1.24it/s]\u001B[A\n",
+      "Processing examples in test:  79%|███████▉  | 7895/10000 [1:53:21<30:16,  1.16it/s]\u001B[A\n",
+      "Processing examples in test:  79%|███████▉  | 7896/10000 [1:53:23<39:34,  1.13s/it]\u001B[A\n",
+      "Processing examples in test:  79%|███████▉  | 7897/10000 [1:53:25<46:45,  1.33s/it]\u001B[A\n",
+      "Processing examples in test:  79%|███████▉  | 7898/10000 [1:53:26<45:44,  1.31s/it]\u001B[A\n",
+      "Processing examples in test:  79%|███████▉  | 7899/10000 [1:53:28<48:31,  1.39s/it]\u001B[A\n",
+      "Processing examples in test:  79%|███████▉  | 7900/10000 [1:53:29<43:28,  1.24s/it]\u001B[A\n",
+      "Processing examples in test:  79%|███████▉  | 7907/10000 [1:53:31<19:59,  1.75it/s]\u001B[A\n",
+      "Processing examples in test:  79%|███████▉  | 7908/10000 [1:53:33<28:00,  1.24it/s]\u001B[A\n",
+      "Processing examples in test:  79%|███████▉  | 7909/10000 [1:53:35<35:21,  1.01s/it]\u001B[A\n",
+      "Processing examples in test:  79%|███████▉  | 7911/10000 [1:53:37<35:53,  1.03s/it]\u001B[A\n",
+      "Processing examples in test:  79%|███████▉  | 7912/10000 [1:53:40<43:24,  1.25s/it]\u001B[A\n",
+      "Processing examples in test:  79%|███████▉  | 7915/10000 [1:53:40<28:12,  1.23it/s]\u001B[A\n",
+      "Processing examples in test:  79%|███████▉  | 7916/10000 [1:53:42<34:21,  1.01it/s]\u001B[A\n",
+      "Processing examples in test:  79%|███████▉  | 7919/10000 [1:53:45<31:19,  1.11it/s]\u001B[A\n",
+      "Processing examples in test:  79%|███████▉  | 7920/10000 [1:53:47<38:58,  1.12s/it]\u001B[A"
      ]
     }
    ],
