--- a/src/NLI-vs-Style-Similarity.ipynb
+++ b/src/NLI-vs-Style-Similarity.ipynb
@@ -10940,13 +10940,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "outputs": [],
+   "source": [
+    "text2 = \"A blond-haired a doctor and his African american a assistant a looking throw new medical manual.\"\n",
+    "stripped = text2.lstrip()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-12-12T16:18:21.669699Z",
+     "start_time": "2024-12-12T16:18:21.634174Z"
+    }
+   },
+   "id": "582458ab8055a1e2"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "outputs": [],
+   "source": [
+    "if stripped:\n",
+    "    start_idx = len(text2) - len(stripped)\n",
+    "    text2 = text2[:start_idx] + stripped[0].lower() + stripped[1:]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-12-12T16:19:13.585120Z",
+     "start_time": "2024-12-12T16:19:13.555821Z"
+    }
+   },
+   "id": "9f050262662ab5ac"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'a blond-haired a doctor and his African american a assistant a looking throw new medical manual.'"
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text2"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-12-12T16:19:16.794206Z",
+     "start_time": "2024-12-12T16:19:16.771641Z"
+    }
+   },
+   "id": "2795eecdd979b0f3"
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "582458ab8055a1e2"
+   "id": "4fc15823b9dc54c5"
   }
  ],
  "metadata": {
