--- a/src/age.ipynb
+++ b/src/age.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-11T11:08:30.559211Z",
-     "start_time": "2024-12-11T11:08:25.116800Z"
+     "end_time": "2024-12-13T13:56:32.575141Z",
+     "start_time": "2024-12-13T13:56:26.664977Z"
     }
    },
    "outputs": [],
@@ -21,13 +21,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
       "text/plain": "age\n34    21634\n35    17156\n33    16827\n36    14526\n37    10199\n38     7371\n39     5471\nName: count, dtype: int64"
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,21 +40,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-11T11:14:59.754436Z",
-     "start_time": "2024-12-11T11:14:59.690724Z"
+     "end_time": "2024-12-13T13:56:32.661776Z",
+     "start_time": "2024-12-13T13:56:32.576437Z"
     }
    },
    "id": "5b64214d0f3af8a1"
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
       "text/plain": "age\n24    82101\n23    76419\n25    67966\n26    57369\n27    46462\nName: count, dtype: int64"
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,21 +65,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-11T11:15:07.772589Z",
-     "start_time": "2024-12-11T11:15:07.740659Z"
+     "end_time": "2024-12-13T13:56:32.706522Z",
+     "start_time": "2024-12-13T13:56:32.679158Z"
     }
    },
    "id": "fe644e734d78ea4f"
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
       "text/plain": "age\n17    81279\n16    71666\n15    40718\n14    27949\n13    12468\nName: count, dtype: int64"
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,21 +90,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-11T11:15:08.509020Z",
-     "start_time": "2024-12-11T11:15:08.483962Z"
+     "end_time": "2024-12-13T13:56:32.746470Z",
+     "start_time": "2024-12-13T13:56:32.724667Z"
     }
    },
    "id": "2c98584a0b97c7ad"
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "label\n20s    330317\n10s    234080\n30s     93184\nName: count, dtype: int64"
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,15 +116,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-11T11:15:10.101746Z",
-     "start_time": "2024-12-11T11:15:10.096558Z"
+     "end_time": "2024-12-13T13:56:32.769410Z",
+     "start_time": "2024-12-13T13:56:32.764737Z"
     }
    },
    "id": "b02776e245c9b49b"
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -146,9 +146,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/9t/lg86d6h9261dz33jq7hsw5ph0000gn/T/ipykernel_3739/3770625573.py:3: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "/var/folders/9t/lg86d6h9261dz33jq7hsw5ph0000gn/T/ipykernel_7827/3770625573.py:3: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  df_train_sampled = df_train.groupby('label').apply(lambda x: x.sample(min_occurence)).reset_index(drop=True)\n",
-      "/var/folders/9t/lg86d6h9261dz33jq7hsw5ph0000gn/T/ipykernel_3739/3770625573.py:7: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "/var/folders/9t/lg86d6h9261dz33jq7hsw5ph0000gn/T/ipykernel_7827/3770625573.py:7: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  df_dev_sampled = df_dev.groupby('label').apply(lambda x: x.sample(min_occurence)).reset_index(drop=True)\n"
      ]
     }
@@ -166,26 +166,26 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-11T11:15:15.495470Z",
-     "start_time": "2024-12-11T11:15:15.320094Z"
+     "end_time": "2024-12-13T13:56:32.958040Z",
+     "start_time": "2024-12-13T13:56:32.789395Z"
     }
    },
    "id": "4700517ad3e009d3"
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "# save sampled data\n",
-    "df_train_sampled.to_csv('../data/age/train_sampled.tsv', index=False, sep=\"\\t\")\n",
-    "df_dev_sampled.to_csv('../data/age/validation_sampled.tsv', index=False, sep=\"\\t\")"
+    "df_train_sampled.to_csv('../data/age/train_sampled.csv', index=False)\n",
+    "df_dev_sampled.to_csv('../data/age/validation_sampled.csv', index=False)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-11T11:15:43.166487Z",
-     "start_time": "2024-12-11T11:15:39.966645Z"
+     "end_time": "2024-12-13T13:56:36.076812Z",
+     "start_time": "2024-12-13T13:56:32.958122Z"
     }
    },
    "id": "f9d75e18ea37e260"
